<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fizzyxwizzyrd@suddenlink.net">albert</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>libserial-dev</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>  
  <exec_depend>launch</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
